# secure-container-image

./: .dockerignore  Dockerfile.base  Dockerfile.base-nodejs20-distroless-debian-11  Dockerfile.base-python3-distroless-debian-11  Dockerfile.distroless  Dockerfile.distroless_base_node  Dockerfile.goapp  Dockerfile.node-app  Dockerfile.node_app  Dockerfile.nodejs20-distroless-debian-11  Dockerfile.py-app-poetry  Dockerfile.py-app-poetry-no-venv  Dockerfile.py_app_poetry  Dockerfile.py_app_poetry_no_venv  Dockerfile.python3-distroless-debian-11  README.md  test.json
.github/workflows/: ci.yml  hadolint.yml
examples/go_app_example/: Dockerfile.goapp
examples/node_examples/: Dockerfile.node-app
examples/node_examples/src/: package.json
examples/node_examples/src/app/: server.js
examples/python_examples/: Dockerfile.py-app-poetry  Dockerfile.py-app-poetry-no-venv
examples/python_examples/py_src/: main.py
node/: Dockerfile  README.MD
python/poetry_example/: Dockerfile  README.MD
python/poetry_without_venv_example/: Dockerfile  README.MD
python/python-poetry/: Dockerfile  pyproject.toml
